--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Ficha Técnica - Projeto</title>
 
-  <!-- ÍCONE DO APP (OBRIGATÓRIO PARA CELULAR) -->
+  <!-- ÍCONE DO APP -->
   <link rel="icon" type="image/jpeg" href="icone.jpeg">
   <link rel="apple-touch-icon" href="icone.jpeg">
   <meta name="theme-color" content="#0d6efd">
@@ -43,14 +43,17 @@
   <div class="logo-container">
     <img src="https://lh3.googleusercontent.com/d/1sqJbZgeTqDqtTDJq0F39jWd6CfogiAUs" alt="Logo">
     <h4>Ficha Técnica - Projeto</h4>
+  </div>
+
+  <!-- FORMULÁRIO -->
+  <form id="checklistForm">
 
     <select name="empresa" class="form-select mb-2" required>
-  <option value="">Selecione a empresa</option>
-  <option value="Supergasbras">Supergasbras</option>
-  <option value="Copa Energia">Copa Energia</option>
-</select></select>
-  
-    <!-- Campo de data com calendário -->
+      <option value="">Selecione a empresa</option>
+      <option value="Supergasbras">Supergasbras</option>
+      <option value="Copa Energia">Copa Energia</option>
+    </select>
+
     <input type="date" name="data" class="form-control mb-2" required>
 
     <select name="cliente" class="form-select mb-2" required>
@@ -87,13 +90,15 @@
     <button type="button" id="btnEnviar" class="btn btn-primary w-100" onclick="enviar()">
       Enviar formulário
     </button>
+
   </form>
 
   <div id="mensagem" class="mt-3 text-center"></div>
+
 </div>
 
 <script>
-  // Preenche automaticamente com a data de hoje
+  // Preenche data de hoje
   document.addEventListener("DOMContentLoaded", function () {
     const hoje = new Date().toISOString().split("T")[0];
     document.querySelector('input[name="data"]').value = hoje;
@@ -126,8 +131,3 @@
 
 </body>
 </html>
-
-
-
-
-
